Fix subtitle spacing

--- a/src/css/_general.scss
+++ b/src/css/_general.scss
@@ -111,15 +111,19 @@ text.paris-map__point {
     }
 }
 
-.paris-subtitle {
-    @include fs-header(2);
-    max-width: calc(100% - 80px);
+.paris-subtitle-container {
     min-height: 50px;
     @include mq(desktop) {
         min-height: 0;
-        max-width: none;
     }
-    margin: 0;
+}
+.paris-subtitle {
+    @include fs-header(2);
+    max-width: calc(100% - 80px);
+    @include mq(desktop) {
+        min-height: 0;
+    }
+    margin: 0 0 10px 0;
 }
 
 .paris-circles-container {
